[PSE-149] Initial version of the preview page, without correct UX
